--- a/resources/abstract.tex
+++ b/resources/abstract.tex
@@ -13,7 +13,7 @@
 
 \begin{document}
 
-\title{ABSTRACT TITLE}
+\title{A REINTEPRETATION OF THE WOBBLING MOTION IN ODD-MASS TRIAXIAL NUCLEI}
 
 
 \author{\uline{Robert Poenaru}$^{1,2}$}
@@ -28,27 +28,16 @@
 
 \rightaddress{robert.poenaru@drd.unibuc.ro}
 
-Some content.
-
-\begin{equation}
-\mathrm{rot}\:\mathrm{rot}\:\hat{E}(\vec{r},t)+\left(\frac{\imath}{c}\right)^{2}\frac{\mathrm{d}^{2}}{\mathrm{d}t^{2}}\hat{E}(\vec{r},t)=-\frac{4\pi}{c}\frac{\mathrm{d}^{2}}{\mathrm{d}t^{2}}\hat{P}(\vec{r},t).\label{eq:Maxwell}
-\end{equation}
-Write the link to the references in angular brackets \cite{key-1}. The list of the references should be written in 8 pt. Times New Roman font. 
-
-The abstract book will be printed in greyscale (color online). Please consider it when preparing the figures to avoid ambiguities in greyscale-printed book. The quality of photos should be at least 150 dpi.
+The wobbling motion for a triaxial nucleus, viewed as the precessional motion of the total angular momentum combined with an oscillation around a steady position, is studied within a semi-classical formalism. Starting from an initial quantal particle-rotor-model Hamiltonian, a set of classical equations of motion are obtained via the time-dependent variational principle. The equations of motion provide a set of wobbling frequencies that are used to calculate the excitation energies that make up the rotational spectrum of a typical wobbling nucleus. Furthermore, the concept of Parity Partner Bands is introduced, which allows a unified description of rotational bands with both positive and negative parity states. For testing the model, quantities such as wobbling energies, rotational frequencies, dynamical moments of inertia are analyzed for two odd-mass nuclei, namely $^{105}$Pd and $^{163}$Lu.
 
 \begin{thebibliography}{References}
 
-\bibitem{key-1}K. Melcher, L.-M. Ng, E. Zhou et al., A gate-latch-lock
-mechanism for hormone signaling by abscisic acid receptors, Nature
-\textbf{462}, 602-608 (1990).
+\bibitem{poenaru_rjp1} Poenaru, R., and A. A. Raduta. "Extensive study of the positive and negative parity wobbling states for an odd-mass triaxial nucleus I: Energy Spectrum." Romanian Journal of Physics 66.7-8 (2021).
 
-\bibitem{key-4}M. A. Green, \textit{High Efficiency Silicon Solar
-Cells} (Trans. Tech. Publications, Switzerland, 1987).
+\bibitem{poenaru_rjp2} Poenaru, R., and A. A. Raduta. "Extensive study of the positive and negative parity wobbling states for an odd-mass triaxial nucleus II: Classical Trajectories." Romanian Journal of Physics 66 (2021): 309.
 
-\bibitem{key-2}J. Belovickis, Acoustooptic interaction of leaky surface
-acoustic waves in YX-LiTaO3 crystals, 54th scientific conference for
-young students of physics and natural sciences Open Readings 2011,
-ISSN 2029-4420, Vilnius University, 103-104 (2011).\end{thebibliography}
+\bibitem{poenaru_ijmpe} Poenaru, R., and A. A. Raduta. "Parity partner bands in 1 6 3 Lu: A novel approach for describing the negative parity states from a triaxial super-deformed band." International Journal of Modern Physics E (2021): 2150033.
+
+\end{thebibliography}
 
 \end{document}
