--- a/resources/abstract.tex
+++ b/resources/abstract.tex
@@ -20,23 +20,21 @@
 
 \maketitle
 
-\address{$^{1}$Department of Theoretical Physics, Horia Hulubei National Institute of Physics and Nuclear Engineering, Magurele, Romania}
+\address{$^{1}$Doctoral School of Physics, University of Bucharest, Bucharest, Romania}
 
-
-\address{$^{2}$Doctoral School of Physics, University of Bucharest, Bucharest, Romania}
-
+\address{$^{2}$Department of Theoretical Physics, NIPNE-HH, Magurele, Romania}
 
 \rightaddress{robert.poenaru@drd.unibuc.ro}
 
-The wobbling motion for a triaxial nucleus, viewed as the precessional motion of the total angular momentum combined with an oscillation around a steady position, is studied within a semi-classical formalism. Starting from an initial quantal particle-rotor-model Hamiltonian, a set of classical equations of motion are obtained via the time-dependent variational principle. The equations of motion provide a set of wobbling frequencies that are used to calculate the excitation energies that make up the rotational spectrum of a typical wobbling nucleus. Furthermore, the concept of Parity Partner Bands is introduced, which allows a unified description of rotational bands with both positive and negative parity states. For testing the model, quantities such as wobbling energies, rotational frequencies, dynamical moments of inertia are analyzed for two odd-mass nuclei, namely $^{105}$Pd and $^{163}$Lu.
+The wobbling motion for a triaxial nucleus, viewed as the precessional motion of the total angular momentum combined with an oscillation around a steady position, is studied within a semi-classical formalism. Starting from an initial quantal particle-rotor-model Hamiltonian, a set of classical equations of motion are obtained via the time-dependent variational principle. The equations of motion provide a set of wobbling frequencies that are used to calculate the excitation energies that make up the rotational spectrum of a typical wobbling nucleus. Furthermore, the concept of Parity Partner Bands is introduced, which allows a unified description of rotational bands with both positive and negative parity states. For testing the model, quantities such as wobbling energies, rotational frequencies, dynamical moments of inertia are analyzed for two odd-mass nuclei, namely $^{105}$Pd and $^{163}$Lu \cite{poenaru_rjp1,poenaru_rjp2,poenaru_ijmpe}.
 
 \begin{thebibliography}{References}
 
-\bibitem{poenaru_rjp1} Poenaru, R., and A. A. Raduta. "Extensive study of the positive and negative parity wobbling states for an odd-mass triaxial nucleus I: Energy Spectrum." Romanian Journal of Physics 66.7-8 (2021).
+\bibitem{poenaru_rjp1} Poenaru, R., and A. A. Raduta. \textit{Extensive study of the positive and negative parity wobbling states for an odd-mass triaxial nucleus I: Energy Spectrum.} Romanian Journal of Physics 66.7-8 (2021).
 
-\bibitem{poenaru_rjp2} Poenaru, R., and A. A. Raduta. "Extensive study of the positive and negative parity wobbling states for an odd-mass triaxial nucleus II: Classical Trajectories." Romanian Journal of Physics 66 (2021): 309.
+\bibitem{poenaru_rjp2} Poenaru, R., and A. A. Raduta. \textit{Extensive study of the positive and negative parity wobbling states for an odd-mass triaxial nucleus II: Classical Trajectories.} Romanian Journal of Physics 66 (2021): 309.
 
-\bibitem{poenaru_ijmpe} Poenaru, R., and A. A. Raduta. "Parity partner bands in 1 6 3 Lu: A novel approach for describing the negative parity states from a triaxial super-deformed band." International Journal of Modern Physics E (2021): 2150033.
+\bibitem{poenaru_ijmpe} Poenaru, R., and A. A. Raduta. \textit{Parity partner bands in 163Lu: A novel approach for describing the negative parity states from a triaxial super-deformed band.} International Journal of Modern Physics E (2021): 2150033.
 
 \end{thebibliography}
 
