fixed the title missprint

--- a/resources/abstract.tex
+++ b/resources/abstract.tex
@@ -13,7 +13,7 @@
 
 \begin{document}
 
-\title{A REINTEPRETATION OF THE WOBBLING MOTION IN ODD-MASS TRIAXIAL NUCLEI}
+\title{A REINTERPRETATION OF THE WOBBLING MOTION IN ODD-MASS TRIAXIAL NUCLEI}
 
 
 \author{\uline{Robert Poenaru}$^{1,2}$}
