add skeleton for the poster's abstract

--- a/resources/poster_abstract/abstract.tex
+++ b/resources/poster_abstract/abstract.tex
@@ -13,7 +13,7 @@
 
 \begin{document}
 
-\title{A REINTERPRETATION OF THE WOBBLING MOTION IN ODD-MASS TRIAXIAL NUCLEI}
+\title{POSTER TITLE}
 
 
 \author{\uline{Robert Poenaru}$^{1,2}$}
@@ -26,7 +26,7 @@
 
 \rightaddress{robert.poenaru@drd.unibuc.ro}
 
-The wobbling motion for a triaxial nucleus, viewed as the precessional motion of the total angular momentum combined with an oscillation around a steady position, is studied within a semi-classical formalism. Starting from an initial quantal particle-rotor-model Hamiltonian, a set of classical equations of motion are obtained via the time-dependent variational principle. The equations of motion provide a set of wobbling frequencies that are used to calculate the excitation energies that make up the rotational spectrum of a typical wobbling nucleus. Furthermore, the concept of Parity Partner Bands is introduced, which allows a unified description of rotational bands with both positive and negative parity states. For testing the model, quantities such as wobbling energies, rotational frequencies, dynamical moments of inertia are analyzed for two odd-mass nuclei, namely $^{105}$Pd and $^{163}$Lu \cite{poenaru_rjp1,poenaru_rjp2,poenaru_ijmpe}.
+Some poster information. Cite the poster in your scientific publications. \cite{poenaru_rjp1,poenaru_rjp2,poenaru_ijmpe}
 
 \begin{thebibliography}{References}
 
