--- a/resources/poster_abstract/abstract.tex
+++ b/resources/poster_abstract/abstract.tex
@@ -13,7 +13,7 @@
 
 \begin{document}
 
-\title{POSTER TITLE}
+\title{INFLUENCE OF THE MOMENTS OF INERTIA ON THE SHAPE AND DYNAMIC OF A TRIAXIAL NUCLEUS}
 
 
 \author{\uline{Robert Poenaru}$^{1,2}$}
@@ -26,15 +26,14 @@
 
 \rightaddress{robert.poenaru@drd.unibuc.ro}
 
-Some poster information. Cite the poster in your scientific publications. \cite{poenaru_rjp1,poenaru_rjp2,poenaru_ijmpe}
+The energy spectra of rapidly rotating nuclei have specific rotational spectra, parametrized in terms of some empirical constants called moments of inertia (MOI), in correspondence to the energy levels of a rigid rotating top. In this work, a quantitative description of the moments of inertia (e.g, kinematic, dynamic) is made, by using different formulas for their calculation. A comparison between the moments of inertia specific to the rigid case and irrotational one is also shown for a set of deformation parameters specific for the triaxial shapes (i.e., $\beta$, $\gamma$) \cite{key-0}. Moreover, the connection between the wobbling motion, namely the wobbling frequency, the rotational frequency, and the three MOIs is analyzed for a specific excited spectrum of odd-mass nuclei \cite{key-1}. The different modes of rotation for the deformed rigid bodies are also specified in terms of these quantities. As a final goal, the theoretical MOIs of several odd-$A$ nuclei are compared to the experimental values using the $ab$ formula\cite{key-2}.
 
 \begin{thebibliography}{References}
+\bibitem{key-0} Masayuki Matsuzaki, Yoshifumi R. Shimizu, and Kenichi Matsuyanagi , AIP Conference Proceedings 865, 139-144 (2006)
 
-\bibitem{poenaru_rjp1} Poenaru, R., and A. A. Raduta. \textit{Extensive study of the positive and negative parity wobbling states for an odd-mass triaxial nucleus I: Energy Spectrum.} Romanian Journal of Physics 66.7-8 (2021).
-
-\bibitem{poenaru_rjp2} Poenaru, R., and A. A. Raduta. \textit{Extensive study of the positive and negative parity wobbling states for an odd-mass triaxial nucleus II: Classical Trajectories.} Romanian Journal of Physics 66 (2021): 309.
-
-\bibitem{poenaru_ijmpe} Poenaru, R., and A. A. Raduta. \textit{Parity partner bands in 163Lu: A novel approach for describing the negative parity states from a triaxial super-deformed band.} International Journal of Modern Physics E (2021): 2150033.
+\bibitem{key-1} Masayuki Matsuzaki, Yoshifumi R. Shimizu, and Kenichi Matsuyanagi Phys. Rev. C \textbf{65}, 041303(R)
+    
+\bibitem{key-2} Timár et al. Phys. Rev. Lett. \textbf{122}, 062501
 
 \end{thebibliography}
 
